--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -8,7 +8,7 @@
         <% end %>
       </ul>
     </div>
-  <% end %>  
+  <% end %>   
 
 <!--Form Start-->
 
@@ -65,35 +65,39 @@
 <br>
 
 
-
+  <!-- LITHOLOGIC LOG -->
   <div class="mb-3" style="text-transform: uppercase;">
     <strong><%= form.label "Lithologic Log:" %></strong>
     <% if @deep_well.log.attached? %>
-
       <%= link_to 'View Current File', @deep_well.log, html_options = { target: "_blank"} %>&nbsp;| &nbsp;
       <%= link_to "Remove Attachment", purge_log_attachment_client_deep_well_path(@deep_well, deep_well.log.id), method: :delete, data: { confirm: 'Are you sure?' } %>
     <%else%>
       <%= form.file_field :log, class:"form-control" %>
     <% end %>
   </div>
+
+  <!-- AS BUILT DESIGNS -->
   <div class="mb-3" style="text-transform: uppercase;">
-    <strong><%= form.label "As-Built Design:" %></strong>
+    <strong><%= form.label "As-Built Designs:" %></strong>
     <% if @deep_well.asbuilt.attached? %>
       <%= link_to 'View Current File', @deep_well.asbuilt, html_options = { target: "_blank"} %>&nbsp; | &nbsp;
       <%= link_to "Remove Attachment", purge_asbuilt_attachment_client_deep_well_path(@deep_well, deep_well.asbuilt.id), method: :delete, data: { confirm: 'Are you sure?' } %>
     <%else%>
-      <%= form.file_field :asbuilt, class:"form-control" %>
+      <%= form.file_field :asbuilt, class:"form-control", multiple: true %>
     <% end %>
   </div>
+
+    <!-- PROPOSED DEEPWELL DESIGNS -->
     <div class="mb-3" style="text-transform: uppercase;">
-    <strong><%= form.label "Proposed Deep Well Design:"%></strong>
+    <strong><%= form.label "Proposed Deep Well Designs:"%></strong>
     <% if @deep_well.design.attached? %>
       <%= link_to 'View Current File', @deep_well.design, html_options = { target: "_blank"} %> &nbsp; | &nbsp;
       <%= link_to "Remove Attachment", purge_design_attachment_client_deep_well_path(@deep_well, deep_well.design.id), method: :delete, data: { confirm: 'Are you sure?' } %>
       <%else%>
-    <%= form.file_field :design, class:"form-control" %>
+    <%= form.file_field :design, class:"form-control", multiple: true %>
     <% end %>
   </div>
+
 
   <div class="actions" style="float:right">
     <%= form.submit :Submit, class: 'btn btn-primary'%>
