--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -65,42 +65,124 @@
 <br>
 
 
-  <!-- LITHOLOGIC LOG -->
-  <div class="mb-3" style="text-transform: uppercase;">
-    <strong><%= form.label "Lithologic Log:" %></strong>
-    <% if @deep_well.log.attached? %>
-      <%= link_to 'View Current File', @deep_well.log, html_options = { target: "_blank"} %>&nbsp;| &nbsp;
-      <%= link_to "Remove Attachment", purge_log_attachment_client_deep_well_path(@deep_well, deep_well.log.id), method: :delete, data: { confirm: 'Are you sure?' } %>
-    <%else%>
-      <%= form.file_field :log, class:"form-control" %>
-    <% end %>
-  </div>
 
-  <!-- AS BUILT DESIGNS -->
-  <div class="mb-3" style="text-transform: uppercase;">
-    <strong><%= form.label "As-Built Designs:" %></strong>
-    <% if @deep_well.asbuilt.attached? %>
-      <%@deep_well.asbuilt.each do |asbuilt|%>
-        <%= link_to(asbuilt.filename, rails_blob_path(asbuilt),  target: '_blank') %>&nbsp; | &nbsp;
-        <!-- link_to "Remove Attachment", purge_asbuilt_attachment_client_deep_well_path(@deep_well, deep_well.asbuilt.id), method: :delete, data: { confirm: 'Are you sure?' } -->
-      <% end %>
-    <%else%>
-      <%= form.file_field :asbuilt, class:"form-control", multiple: true %>
-    <% end %>
-  </div>
+<!-- Lithologic File Start-->
+<% if @deep_well.log.attached? %>
+  <table class="table table-hover table-bordered ">
+    <tbody>
+      <tr>
+        <td> <strong> Lithologic File </strong></td>
+        <td> <strong> Date Uploaded </strong></td>
+        <td> <strong> Delete </strong></td>
+      </tr>
+      <tr>
+        <td>
+          <% if @deep_well.log.attached? %>
+            <p>
+              <%= link_to @deep_well.log.filename, @deep_well.log, html_options = { target: "_blank"} if @deep_well.log.attached? %>
+            </p>
+          <% else %>
+            <p>
+              <i> File unavailable </i>
+            </p>
+          <% end %>
+        </td>
+        <td>
+          <% if @deep_well.log.attached? %>
+            <p>
+              <%= @deep_well.log.created_at %>
+            </p>
+          <% else %>
+            <p>
+              -
+            </p>
+          <% end %>
+        </td>
+        <td>
+          <% if @deep_well.log.attached? %>
+            <p>
+              <%= link_to "Remove Attachment", purge_log_attachment_client_deep_well_path(@deep_well, deep_well.log.id), method: :delete, data: { confirm: 'Are you sure?' } %>
+            </p>
+          <% else %>
+            <p>
+              -
+            </p>
+          <% end %>
+        </td>
 
-    <!-- PROPOSED DEEPWELL DESIGNS -->
-    <div class="mb-3" style="text-transform: uppercase;">
-    <strong><%= form.label "Proposed Deep Well Designs:"%></strong>
-    <% if @deep_well.design.attached? %>
-      <%@deep_well.design.each do |design|%>
-        <%= link_to(design.filename, rails_blob_path(design),  target: '_blank') %> &nbsp; | &nbsp;
-        <!-- link_to "Remove Attachment", purge_design_attachment_client_deep_well_path(@deep_well, deep_well.design.id), method: :delete, data: { confirm: 'Are you sure?' } -->
+      </tr>
+    </tbody>
+  </table>
+<% else %>
+  <strong><%= form.label "Lithologic Log:" %></strong>
+  <%= form.file_field :log, class:"form-control" %> 
+<% end %> 
+  <!-- Lithologic File End-->
+
+<br>
+
+  <!-- Asbuilt Files Start-->
+  <% if @deep_well.asbuilt.attached? %>
+  <table class="table table-hover table-bordered ">
+    <thead>
+        <tr>
+          <th>  As-Built Design Files </th>
+          <th>  Date Uploaded </th>
+          <th>  Delete </th>
+        </tr>
+    </thead>
+    <tbody>
+        <% if !@deep_well.asbuilt.attached? %>
+          <tr>
+            <td> <i> File unavailable </i></td>
+            <td> - </td>
+            <td> - </td>
+          </tr>
+        <% else %>
+        <%@deep_well.asbuilt.each do |asbuilt|%>
+          <tr>
+            <td><%= link_to(asbuilt.filename, rails_blob_path(asbuilt),  target: '_blank') %></td>
+            <td> <%= asbuilt.created_at %></td>
+            <td> Remove Attachment </td>
+          </tr>
         <% end %>
-      <%else%>
-    <%= form.file_field :design, class:"form-control", multiple: true %>
-    <% end %>
-  </div>
+        <% end %>
+      </tbody>
+  </table>
+  <%else%>
+      <strong>As-Built Designs: </strong>
+      <%= form.file_field :asbuilt, class:"form-control", multiple: true %>
+  <% end %>
+  <!-- Asbuilt Files End--> <br>
+
+  <!-- Deepwell Design Proposal Start-->
+  <table class="table table-hover table-bordered ">
+    <thead>
+        <tr>
+          <th>  Deepwell Design Proposal Files</th>
+          <th>  Date Uploaded </th>
+          <th>  Delete </th>
+        </tr>
+    </thead>
+    <tbody>
+        <% if !@deep_well.design.attached? %>
+          <tr>
+            <td> <i> File unavailable </i> </td>
+            <td> - </td>
+            <td> - </td>
+          </tr>
+        <% else %>
+        <%@deep_well.design.each do |design|%>
+          <tr>
+            <td> <%= link_to(design.filename, rails_blob_path(design),  target: '_blank') %></td>
+            <td> <%= design.created_at %> </td>
+            <td> Remove Attachment </td>
+          </tr>
+        <% end %>
+        <% end %>
+      </tbody>
+  </table>
+  <!-- Deepwell Design Proposal End-->
 
 
   <div class="actions" style="float:right">
