--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -81,16 +81,13 @@
 
   <br>
     <h2> File Attachments </h2>
-
-
   <!-- Lithologic File Start-->
   <table class="table table-hover table-bordered ">
     <tbody>
-        <tr>
-          <td> <strong> Lithologic File </strong></td>
-          <td> <strong> Date Uploaded </strong></td>
-          <td> <strong> Delete File </strong> </td>
-        </tr>
+      <tr>
+        <td> <strong> Lithologic File </strong></td>
+        <td> <strong> Date Uploaded </strong></td>
+      </tr>
       <tr>
         <td>
           <% if @deep_well.log.attached? %>
@@ -114,17 +111,7 @@
             </p>
           <% end %>
         </td>
-        <td>
-          <% if @deep_well.log.attached? %>
-            <p>
-              -
-            </p>
-          <% else %>
-            <p>
-              -
-            </p>
-          <% end %>
-        </td>
+
       </tr>
     </tbody>
   </table>
@@ -136,7 +123,6 @@
         <tr>
           <th>  As-Built Design Files</th>
           <th>  Date Uploaded </th>
-          <th>  Delete File </th>
         </tr>
     </thead>
     <tbody>
@@ -144,14 +130,12 @@
           <tr>
             <td> <i> File unavailable </i></td>
             <td> - </td>
-            <td> -  </td>
           </tr>
         <% else %>
         <%@deep_well.asbuilt.each do |asbuilt|%>
           <tr>
             <td><%= link_to(asbuilt.filename, rails_blob_path(asbuilt),  target: '_blank') %></td>
-            <td> Date Uploaded </td>
-            <td> Delete File </td>
+            <td > <%= asbuilt.created_at %></td>
           </tr>
         <% end %>
         <% end %>
@@ -165,7 +149,6 @@
         <tr>
           <th>  Deepwell Design Proposal Files</th>
           <th>  Date Uploaded </th>
-          <th>  Delete File </th>
         </tr>
     </thead>
     <tbody>
@@ -173,14 +156,12 @@
           <tr>
             <td> <i> File unavailable </i> </td>
             <td> - </td>
-            <td> -  </td>
           </tr>
         <% else %>
         <%@deep_well.design.each do |design|%>
           <tr>
             <td><%= link_to(design.filename, rails_blob_path(design),  target: '_blank') %></td>
-            <td> Date Uploaded </td>
-            <td> Delete File </td>
+            <td> <%= design.created_at %> </td>
           </tr>
         <% end %>
         <% end %>
