--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -1,19 +1,21 @@
-<h2><%= t "devise.invitations.new.header" %></h2>
+<div class="container">
+  <h1><%= t "devise.invitations.new.header" %></h2>
 
-<%= form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { method: :post }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <% resource.class.invite_key_fields.each do |field| -%>
-    <div class="field">
-      <%= f.label "Email" %><br />
-      <%= f.text_field field %>
+    <% resource.class.invite_key_fields.each do |field| -%>
+      <div class="field">
+        <%= f.label "Enter User Email Here:"%><br />
+        <%= f.text_field field, class: "form-control" %>
+        <br>
+      </div>
+    <% end -%>
+    <div style="float:right;">
+      <%= link_to "Back", :back, class: 'btn btn-light'%>
     </div>
-  <% end -%>
-
-  <div class="actions">
-    <%= f.submit t("devise.invitations.new.submit_button") %>
-  </div>
-  <div>
-  <%= link_to "Back", :back %>
-  </div>
-<% end %>
+    <div class="actions" style="float:right;">
+       <%= f.submit t("devise.invitations.new.submit_button"), class: 'btn btn-primary' %>&nbsp;
+    </div>
+  <% end %>
+</div>
