--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -154,7 +154,7 @@
                 <td> <%= link_to(asbuilt.filename, rails_blob_path(asbuilt),  target: '_blank') %></td>
                 <!--< link_to @deep_well.asbuilt, @deep_well.asbuilt, html_options = { target: "_blank"} if @deep_well.asbuilt.attached? %></td>-->
                 <td> <%= asbuilt.created_at %></td>
-                <td> Remove Attachment <!-- link_to 'Remove Attachment', purge_asbuilt_attachment_client_deep_well_path(@deep_well.asbuilt), method: :delete, data: { confirm: 'Are you sure?' } --> </td> 
+                <td> <%= link_to 'Remove Attachment', purge_asbuilt_attachment_client_deep_well_path(@client, asbuilt), method: :delete, data: { confirm: 'Are you sure?' } %> </td> 
               </tr>
           <% end %>
         <% end %>
