--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -1,9 +1,24 @@
 <div class="container">
-  <h1>Islands</h1>  
+  <h1>Islands</h1> 
+  <%= search_form_for @q do |f| %>
+  <div class="form-group">
+    <%= f.label :island_name_cont %>
+    <%= f.text_field :island_name_cont, :class => "form-control" , placeholder:"Search Island" %>
+    <%= f.label :clients_client_name_cont %>
+    <%= f.text_field :clients_client_name_cont, :class => "form-control", placeholder:"Search Client" %>
+        <!--< f.select :clients_id_eq, options_for_select(Client.pluck(:client_name).uniq, @q.clients_id_eq), {:include_blank => true}, {class: ''} %>
+        < f.select :clients_id_eq, options_from_collection_for_select(Client.all.order(:client_name), :id, :client_name, @q.clients_id_eq), {:include_blank => true}, {class: ''} %> -->
+    <%= f.submit "Search", class:"btn btn-light text-right float-end" %>&nbsp;
+    <%= link_to "Reset", request.path, class:"btn btn-light text-right float-end" %>
+  </div>
+  <% end %>
+
+
+
   <table class="table table-hover table-bordered ">
   <thead>
     <tr>
-      <th style="width: auto">Island Name</th>
+      <th style="width: auto"><%= sort_link(@q, :island_name, "Island", default_order: :asc)%></th>
       <th style="width: auto;">Number of Clients</th>
       <th style="width: auto;">Edit</th>
       <th style="width: auto;">Delete</th>
