--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -1,20 +1,28 @@
-<div class="container">
+<div class="container"> 
   <h1>Islands</h1> 
-  <%= search_form_for @q do |f| %>
-  <div class="form-group">
-    <%= f.label :island_name_cont %>
-    <%= f.text_field :island_name_cont, :class => "form-control" , placeholder:"Search Island" %>
-    <%= f.label :clients_client_name_cont %>
-    <%= f.text_field :clients_client_name_cont, :class => "form-control", placeholder:"Search Client" %>
-        <!--< f.select :clients_id_eq, options_for_select(Client.pluck(:client_name).uniq, @q.clients_id_eq), {:include_blank => true}, {class: ''} %>
-        < f.select :clients_id_eq, options_from_collection_for_select(Client.all.order(:client_name), :id, :client_name, @q.clients_id_eq), {:include_blank => true}, {class: ''} %> -->
-    <%= f.submit "Search", class:"btn btn-light text-right float-end" %>&nbsp;
-    <%= link_to "Reset", request.path, class:"btn btn-light text-right float-end" %>
+  <!-- Search Forms Start -->
+  <div>
+    <%= search_form_for @q do |f| %>
+      <div class="row">
+        <div class="col">
+          <%= f.label "Island Name Contains:" %>
+          <%= f.text_field :island_name_cont, :class => "form-control" , placeholder:"Search Island" %>
+        </div>
+        <div class="col">
+          <%= f.label "Client Name Contains:" %>
+          <%= f.text_field :clients_client_name_cont, :class => "form-control", placeholder:"Search Client" %>
+        </div>
+          <div class="col">
+            <br>
+            <%= f.submit "Search", class:"btn btn-outline-primary text-center float-left" %>
+            <%= link_to "Reset Search", request.path, class:"btn btn-light text-center" %>
+          </div>
+      </div><br>
+    <% end %>
   </div>
-  <% end %>
+  <!-- Search Forms End -->
 
-
-
+  <!-- Island Table Start -->
   <table class="table table-hover table-bordered ">
   <thead>
     <tr>
@@ -36,7 +44,7 @@
   </tbody>
 </table>
 <br>
-
+<!-- Island Table End -->
 <button type="button" class="btn text-right float-end" >
   <%= link_to 'New Island', new_island_path %>
 </button>
