--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -24,7 +24,7 @@
           <td>
             <p>
               <strong>CLIENT NAME:</strong>
-              <%= @deep_well.clientName %>
+              <%= @client.client_name%>
             </p>
           </td>
           <td>
@@ -89,7 +89,7 @@
   <br>
     <h2> File Attachments </h2>
   <!-- Lithologic File Start-->
-  <table class="table table-hover table-bordered ">
+  <table class="table table-bordered ">
     <tbody>
       <tr>
         <th style="width: 50%"> <strong> Lithologic File </strong></td>
@@ -121,7 +121,7 @@
   <!-- Lithologic File End-->
 
   <!-- Asbuilt Files Start-->
-  <table class="table table-hover table-bordered">
+  <table class="table table-bordered">
     <thead>
         <tr>
           <th style="width: 50%">  As-Built Design Files</th>
@@ -147,7 +147,7 @@
   <!-- Asbuilt Files End-->
 
   <!-- Deepwell Design Proposal Start-->
-  <table class="table table-hover table-bordered">
+  <table class="table table-bordered">
     <thead>
         <tr>
           <th style="width: 50%">  Deepwell Design Proposal Files</th>
