--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -20,7 +20,7 @@
       </div>
       <div class="field">
         <strong><%= form.label "Client Name:" %> </strong>
-        <%= form.text_field :clientName, class:"form-control" %>
+        
       </div>
       <div class="field">
         <strong><%= form.label "Well Location:" %></strong>
@@ -198,7 +198,7 @@
 
   <div class="actions" style="float:right">
     <%= form.submit :Submit, class: 'btn btn-primary'%>
-    <%= link_to "Back", :back, class: 'btn btn-light' %>
+    <%= link_to "Back", client_deep_well_path , class: 'btn btn-light' %>
   </div>
   <% end %>
 
