--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Deep Wells</h1>
+  <h1><%= @client.client_name%> Deep Wells</h1> 
   <!-- Search Form Start -->
   <div>
     <%= search_form_for @q, url: client_deep_wells_path(params[:client_id]) do |f| %>
