--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -193,13 +193,10 @@
   </table>
       <%= form.file_field :design, class:"form-control", multiple: true %>
   <!-- Deepwell Design Proposal End-->
-
-<br>
-
-  <div class="actions" style="float:right">
+  <div class="actions" style="float:left"> <br>
     <%= form.submit :Submit, class: 'btn btn-primary'%>
-    <%= link_to "Back", client_deep_well_path , class: 'btn btn-light' %>
   </div>
-  <% end %>
-
+    
+    <% end %>
+<br>
 <!--Form End-->
