--- a/app/views/deep_wells/edit.html.erb
+++ b/app/views/deep_wells/edit.html.erb
@@ -3,5 +3,9 @@
 
 	<%= render 'form', deep_well: @deep_well %>
 
+	<div class="actions" style="float:right">
+    	<%= link_to "Back", client_deep_well_path , class: 'btn btn-light' %>
+  	</div>
+  
 
 </div>
