--- a/app/views/deep_wells/new.html.erb
+++ b/app/views/deep_wells/new.html.erb
@@ -2,5 +2,10 @@
 	<h1>New Deep Well</h1>
 
 	<%= render 'form', deep_well: @deep_well %>
+
+	<div class="actions" style=" float: right;">
+    	<%= link_to "Back", client_deep_wells_path , class: 'btn btn-light' %>
+  	</div>
+
 	<br> <br>
 </div> 
