--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -24,7 +24,8 @@
 
   <div style="float:left; padding-bottom: 10px; margin-top: 15px;">
     <%= link_to 'New Deep Well', new_client_deep_well_path, class:"btn btn-primary", style:"float: left" %>
-    &nbsp;<%= link_to 'Back', island_clients_path(@client), class:"btn btn-light"%>&nbsp;
+    &nbsp; <%= link_to 'Back', :back, class:"btn btn-light"%> &nbsp;
+    <!--&nbsp;<% link_to 'Back', island_clients_path(@client), class:"btn btn-light"%>-->&nbsp;
   </div>
 
 
